<resources>
    <string name="app_name">Simple E Commerce App</string>
    <string name="error_message">Error!</string>
    <string name="error_time_out">Time Out!</string>
    <string name="error_try_again">Try Again!</string>
    <string name="error_eofe">Flow Error!</string>
    <string name="error_unknown">Unknown Error!</string>
    <string name="alert_msg_ok_button">OK!</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_cart">Cart</string>
    <string name="title_product">Product Title</string>
    <string name="desc">Description</string>
    <string name="rate_title">Rate</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="fragment_detail">Product Detail</string>
    <string name="title_profile">Profile</string>
    <string name="price">%s$</string>
    <string name="total_price">Total Price: %.02f$</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="add_cart">Add Cart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="saved_users">Saved Users</string>
    <string name="empty_cart_string">Your cart is empty. Click To See The Products!</string>
    <string name="buy_cart">Buy Cart</string>
    <string name="e_mail">E-Mail :</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="success_login">Login Success!</string>
    <string name="msg_nav_dashboard">You Are Redirected To Dashboard!</string>
    <string name="msg_nav_login">You Are Redirected To Login Page!</string>
    <string name="attention">Attention!</string>
    <string name="user_not_found">The user you entered was not found!</string>
    <string name="success">Success!</string>
    <string name="cart_apply_msg">Cart Total Amount %.02f$ Transaction Confirmed!</string>
    <string name="item_already_cart">This Product Is Already In Your Cart!</string>
    <string name="msg_added_cart">The product has been added to your cart!</string>
    <string name="phone_number">+ %s</string>
    <string name="rate">(%s)</string>
</resources>