<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.bedirhandroid.simpleecommerceapp.ui.fragments.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_navigation_cart_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_cart_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bedirhandroid.simpleecommerceapp.ui.fragments.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bedirhandroid.simpleecommerceapp.ui.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.bedirhandroid.simpleecommerceapp.ui.fragments.detail.DetailFragment"
        android:label="@string/fragment_detail"
        tools:layout="@layout/fragment_detail" />
</navigation>