<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_s11"
        app:cardCornerRadius="@dimen/margin_s4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shaped_background"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_s3"
                android:src="@drawable/ic_profile"
                android:contentDescription="@string/title_profile" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_s5"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_s12"
                tools:text="Bedirhan Dağ" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_s3"
                        android:text="@string/e_mail"
                        android:textAlignment="textEnd"
                        android:textSize="@dimen/text_size_s9" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_s3"
                        android:text="@string/address"
                        android:textAlignment="textEnd"
                        android:textSize="@dimen/text_size_s9" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_s3"
                        android:text="@string/phone"
                        android:textAlignment="textEnd"
                        android:textSize="@dimen/text_size_s9" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_s3"
                        tools:text="bdrhandag@gmail.com"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_s9" />

                    <TextView
                        android:id="@+id/tv_adress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_s3"
                        tools:text="Seferihisar/izmir"
                        android:textAlignment="center"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size_s9" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_s3"
                        tools:text="+90 543 240 08 20"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_s9" />

                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_s9"
                android:text="@string/logout"
                app:cornerRadius="10dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>