<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    tools:context=".ui.fragments.detail.DetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_s11"
            android:background="@drawable/shaped_background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_s5"
                android:contentDescription="@string/title_product" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_s3"
                android:layout_marginBottom="@dimen/margin_s3"
                android:text="@string/title_product"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_s12"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_s3"
                android:layout_marginBottom="@dimen/margin_s3"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_s9"
                tools:text="Title Product" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_s3"
                android:layout_marginBottom="@dimen/margin_s3"
                android:text="@string/desc"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_s12"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_desc_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_s3"
                android:layout_marginBottom="@dimen/margin_s3"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_s9"
                tools:text="Title Product Title Product Title Product Title Product Title Product Title Product Title Product Title Product " />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_s3"
                android:layout_marginBottom="@dimen/margin_s3"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_s12"
                android:textStyle="bold"
                tools:text="@string/rate_title" />

            <TextView
                android:id="@+id/tv_rate_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:textAlignment="center"
                tools:text="(500)" />


            <RatingBar
                android:id="@+id/rb_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_cart"
                app:cornerRadius="10dp" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>